tests/Rules/Structure/Fixtures/valid/valid.html.twig
<html lang="en">
  <body>
    <button>Click me</button>
    <a href="#">Link</a>
    <img src="ok.png" alt="description">
  </body>
</html>
