tests/Rules/Structure/Fixtures/invalid/invalid.html.twig
{# multi-rule fixture — see MultiRulesTest #}
<html>
  <body>
    <marquee>nope</marquee>
    <img src="bad.png">
    <div tabindex="3">focus me</div>
    <button></button>
    <a href="#"></a>
  </body>
</html>
